--- a/login.html
+++ b/login.html
@@ -15,6 +15,7 @@
             width: 25%;
             margin: 20px;
             float: left;
+            max-width: 200px;
         }
         .header .font {
             font-size: 10mm;
